k8s/06-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: mymicro
spec:
  rules:
    - host: micro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: api-users
                port:
                  number: 8080
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: api-orders
                port:

                  number: 8080
